--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,8 @@
 {
   "plant": "tomato",
-  "interval": 1,
-  "runTime": 50,
+  "interval": 60,
+  "runTime": 10,
   "nutrients": 50,
-  "waterLevel": 80
+  "waterLevel": 80,
+  "pump": true
 }
